<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/edit_login_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_username_hint"
          android:inputType="phone"
          android:textColor="@android:color/black"
          android:textColorHint="@android:color/white"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

      <EditText
          android:id="@+id/edit_login_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_passowrd_hint"
          android:inputType="textPassword"
          android:textColor="@android:color/widget_edittext_dark"
          android:textColorHint="@android:color/white"
          />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_border"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="48dp"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/btn_login"
          android:textColor="@android:color/white"
          android:textSize="@dimen/text_size_button"
          />
    </FrameLayout>
  </LinearLayout>

  <include layout="@layout/include_login_platform"
      />

  <FrameLayout
      android:id="@+id/container_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:background="#39c5a2"
      android:foreground="?attr/selectableItemBackground"
      android:minHeight="48dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_bottom_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_button"
        />
  </FrameLayout>

</LinearLayout>