<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <FrameLayout
            android:id="@+id/container_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:foreground="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/btn_login"
              android:textSize="@dimen/text_size_medium"
              />
        </FrameLayout>
        <com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout
            android:id="@+id/container_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:foreground="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
          <com.facebook.drawee.view.SimpleDraweeView
              android:id="@+id/image_avatar"
              android:layout_width="70dp"
              android:layout_height="70dp"
              fresco:placeholderImage="@drawable/placeholder_avatar"
              fresco:roundAsCircle="true"
              />

          <TextView
              android:id="@+id/text_account_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:layout_marginStart="@dimen/activity_horizontal_margin"
              android:layout_toEndOf="@id/image_avatar"
              android:layout_toRightOf="@id/image_avatar"
              android:text="@string/placehold_short"
              android:textSize="@dimen/text_size_medium"
              />
        </com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout>
      </FrameLayout>


      <com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout
          android:id="@+id/container_account_settings"
          android:layout_width="match_parent"
          android:layout_height="@dimen/listPreferredItemHeightSmall"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:background="@android:color/white"
          android:foreground="?attr/selectableItemBackground"
          android:paddingEnd="@dimen/activity_horizontal_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:paddingStart="@dimen/activity_horizontal_margin"
          >
        <ImageView
            android:id="@android:id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_account_settings"
            />
        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@android:id/icon"
            android:layout_toRightOf="@android:id/icon"
            android:singleLine="true"
            android:text="@string/account_settings"
            android:textColor="#534b4e"
            android:textSize="@dimen/text_size_large"
            />
        <ImageView
            android:id="@android:id/icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_arrow_right"
            />
      </com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
